[VDI-2260] Fix titles too long in a window
It was shown in multiple lines

--- a/src/ventus/css/window.less
+++ b/src/ventus/css/window.less
@@ -135,6 +135,13 @@
 				font-size: 16px;
 				font-weight: 400;
 				color: #fff;
+
+                .wm-window-title-text {
+                    max-height: 1.5em;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
 			}
 
 			.wm-button-group {
